Add better error handler

--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@
         </div>
     </div>
 
+    <!-- Modal de resultado -->
+    <div id="result-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Resultado del juego</h2>
+            </div>
+            <div class="modal-body">
+                <p id="modal-message"></p>
+            </div>
+            <div class="modal-footer">
+                <button id="modal-close-button" class="modal-button">Cerrar</button>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
